# for display continuity sake please use 2 spaces instead of tabs
2012-12-18   Giuseppe Aruta (giuseppe_aruta@yahoo.it)
  * Move Show ScaleBarPlugin, ShowScalePlugIn and NorthArrowPlugin to "View>Decoration" submenu.
  * Add icons to ScaleBarPlugin, ShowScalePlugIn and NorthArrowPlugin and ToolTip plugIns

2012-12-18  mmichaud <michael.michaud@free.fr>
  * Move Vertex Cursor Tool : shift double click will now delete a vertex
    after a suggestion from Jukka and Peppe.

2012-12-17  ede
  * adding support for GeoTIFF with transformation matrix georeferencing
    courtesy of Nicolas Ribot

2012-12-17   Giuseppe Aruta (giuseppe_aruta@yahoo.it)
  * Move Delete Layer plugin to its original position on Layer context menu.

2012-12-13  mmichaud <michael.michaud@free.fr>
  * Move Vertex Cursor Tool : double click will now insert a vertex (Feature
    request submitted by Andrei Nacu). Could not get rid of the warnig though.
  
2012-12-13  mmichaud <michael.michaud@free.fr>
  * Change jts-1.12 to jts-1.13

2012-12-12  Giuseppe Aruta (giuseppe_aruta@yahoo.it)
  * Add Arrange views plugin (Vertically, Horizontally, Cascade) to Windows menu
  * Add Icon to Clone Windows menu

2012-12-06  Giuseppe Aruta (giuseppe_aruta@yahoo.it)
  * Add icon to ToggleVisibilityPlugIn plugin
  * Move Delete selected layer plugin from top to bottom layer menu (test - Modify JUMPConfiguration.java)

2012-12-04 mmichaud <michael.michaud@free.fr>
  * Improved PostGISWriter : solve case sensitivity problem, list table in
    alphabetical order without duplicate. Remember layer to table mapping.

2012-12-02 ede
  * added -h/-help -v/-version command line parameters
  * refined -help output
  * better validity check (option argument count)
  * treat lonesome arguments as files to load
  * load project and data files when given via command line
  * data files are loaded into project file (see example below) or into a newly created task frame
  * it's possible to open more than one project, data file 