@@ -1593,6 +1593,7 @@ ui.MenuNames.TOOLS.WARP = Warp
 ui.MenuNames.TOPOLOGY = Topology
 ui.MenuNames.TWOLAYERS = Two layers
 ui.MenuNames.VIEW = View
+ui.MenuNames.VIEW.MAP_DECORATIONS = Map Decorations
 ui.MenuNames.WINDOW = Window
 ui.MenuNames.WINDOW.SYNCHRONIZATION = Synchronization
 ui.MenuNames.ZOOM = Zoom
@@ -1921,7 +1922,7 @@ ui.plugin.analysis.OffsetCurvePlugIn.fixed-distance = Fixed Distance
 ui.plugin.analysis.OffsetCurvePlugIn.offset = offset
 ui.plugin.analysis.OffsetCurvePlugIn.rough-offset-curve = Compute Rough Offset Curves
 ui.plugin.analysis.OffsetCurvePlugIn.rough-offset-curve-tooltip = Rough Offset Curves may produce many auto-intersections
-ui.plugin.analysis.OffsetCurvePlugIn.description = Offset all lines in the input layer.\nPositive offset is on the left of the oriented line while negative offset is on the right.
+ui.plugin.analysis.OffsetCurvePlugIn.description = Offset lines.\nPositive offset is on the left of the oriented line while negative offset is on the right.
 ui.plugin.analysis.OverlayPlugIn.create-new-layer-containing-intersections-of-all-pairs-of-input-features = Creates a new layer containing intersections of all pairs of input features.
 ui.plugin.analysis.OverlayPlugIn.first-layer = First Layer
 ui.plugin.analysis.OverlayPlugIn.limit-output-to-polygons-only = Limit output to polygons only.
