@@ -1572,6 +1572,7 @@ ui.MenuNames.TOOLS.WARP = Transformace
 ui.MenuNames.TOPOLOGY = Topologie
 ui.MenuNames.TWOLAYERS = Dv\u011B vrstvy
 ui.MenuNames.VIEW = Pohled
+ui.MenuNames.VIEW.MAP_DECORATIONS = \#T\:Map Decorations
 ui.MenuNames.WINDOW = Okno
 ui.MenuNames.WINDOW.SYNCHRONIZATION = Synchronizace
 ui.MenuNames.ZOOM = P\u0159ibl\u00ED\u017Een\u00ED/Odd\u00E1len\u00ED
@@ -1894,7 +1895,7 @@ ui.plugin.analysis.GeometryFunctionPlugIn.layer-a = Vrstva A
 ui.plugin.analysis.GeometryFunctionPlugIn.layer-b = Vrstva B
 ui.plugin.analysis.GeometryFunctionPlugIn.symetric-difference = Symetrick\u00FD rozd\u00EDl
 ui.plugin.analysis.GeometryFunctionPlugIn.union = Sjednocen\u00ED
-ui.plugin.analysis.OffsetCurvePlugIn.description = \#T\:Offset all lines in the input layer.\nPositive offset is on the left of the oriented line while negative offset is on the right.
+ui.plugin.analysis.OffsetCurvePlugIn.description = \#T\:Offset lines.\nPositive offset is on the left of the oriented line while negative offset is on the right.
 ui.plugin.analysis.OffsetCurvePlugIn.distance = \#T\:Distance
 ui.plugin.analysis.OffsetCurvePlugIn.fixed-distance = \#T\:Fixed Distance
 ui.plugin.analysis.OffsetCurvePlugIn.offset = \#T\:offset
