@@ -1577,6 +1577,7 @@ ui.MenuNames.TOOLS.WARP = Transformiere
 ui.MenuNames.TOPOLOGY = Topologie
 ui.MenuNames.TWOLAYERS = Zwei Ebenen
 ui.MenuNames.VIEW = Ansicht
+ui.MenuNames.VIEW.MAP_DECORATIONS = \#T\:Map Decorations
 ui.MenuNames.WINDOW = Fenster
 ui.MenuNames.WINDOW.SYNCHRONIZATION = Synchronization
 ui.MenuNames.ZOOM = Zoom
@@ -1899,7 +1900,7 @@ ui.plugin.analysis.GeometryFunctionPlugIn.layer-a = Ebene A
 ui.plugin.analysis.GeometryFunctionPlugIn.layer-b = Ebene B
 ui.plugin.analysis.GeometryFunctionPlugIn.symetric-difference = Symmetrische Differenz
 ui.plugin.analysis.GeometryFunctionPlugIn.union = Vereinigung
-ui.plugin.analysis.OffsetCurvePlugIn.description = \#T\:Offset all lines in the input layer.\nPositive offset is on the left of the oriented line while negative offset is on the right.
+ui.plugin.analysis.OffsetCurvePlugIn.description = \#T\:Offset lines.\nPositive offset is on the left of the oriented line while negative offset is on the right.
 ui.plugin.analysis.OffsetCurvePlugIn.distance = Entfernung
 ui.plugin.analysis.OffsetCurvePlugIn.fixed-distance = feste Entfernung
 ui.plugin.analysis.OffsetCurvePlugIn.offset = Versatz
