@@ -1609,6 +1609,7 @@ ui.MenuNames.TOOLS.WARP=Deformar
 ui.MenuNames.TOPOLOGY=Topolog\u00EDa
 ui.MenuNames.TWOLAYERS=Dos capas
 ui.MenuNames.VIEW=Vista
+ui.MenuNames.VIEW.MAP_DECORATIONS = \#T\:Map Decorations
 ui.MenuNames.WINDOW=Ventana
 ui.MenuNames.WINDOW.SYNCHRONIZATION=Sincronizar
 ui.MenuNames.ZOOM=Zoom
@@ -1729,7 +1730,7 @@ ui.plugin.analysis.GeometryFunctionPlugIn.The-Source-layer-features-provide-the-
 ui.plugin.analysis.GeometryFunctionPlugIn.union=Uni\u00F3n
 ui.plugin.analysis.GeometryFunctionPlugIn.Update-Source-features-with-result=Actualizar los elementos de origen con el resultado
 ui.plugin.analysis.GeometryFunctionPlugIn.Use-selected-features-only=Utilizar s\u00F3lo elementos seleccionados
-ui.plugin.analysis.OffsetCurvePlugIn.description = \#T\:Offset all lines in the input layer.\nPositive offset is on the left of the oriented line while negative offset is on the right.
+ui.plugin.analysis.OffsetCurvePlugIn.description = \#T\:Offset lines.\nPositive offset is on the left of the oriented line while negative offset is on the right.
 ui.plugin.analysis.OffsetCurvePlugIn.distance=Distancia
 ui.plugin.analysis.OffsetCurvePlugIn.fixed-distance=Distancia definida
 ui.plugin.analysis.OffsetCurvePlugIn.offset=offset
