@@ -1608,6 +1608,7 @@ ui.MenuNames.TOOLS.WARP=Oikaisu
 ui.MenuNames.TOPOLOGY=Topologia
 ui.MenuNames.TWOLAYERS=Kaksi tasoa
 ui.MenuNames.VIEW=N\u00E4yt\u00E4
+ui.MenuNames.VIEW.MAP_DECORATIONS = \#T\:Map Decorations
 ui.MenuNames.WINDOW=Ikkuna
 ui.MenuNames.WINDOW.SYNCHRONIZATION=Synkronointi
 ui.MenuNames.ZOOM=Kohdista
@@ -1643,7 +1644,7 @@ ui.plugin.analysis.AttributeQueryPlugIn.Value=Arvo
 ui.plugin.analysis.BufferPlugIn.advanced-options=Lis\u00E4asetukset
 ui.plugin.analysis.BufferPlugIn.attribute-to-use=Ominaisuus
 ui.plugin.analysis.BufferPlugIn.attribute-to-use-tooltip=Voidaan k\u00E4ytt\u00E4\u00E4 vain koko tasolle eik\u00E4 pelk\u00E4st\u00E4\u00E4n valituille kohteille
-ui.plugin.analysis.BufferPlugIn.buffers-all-geometries-in-the-input-layer=Puskuroi kaikki sy\u00F6tt\u00F6tason geometriat ja laskee niiden viereen uudet geometriat.  Positiivinen poikkeutus on kulkusuunnassa vasemmalle, negatiivinen oikealle.  Uudet geometriat voivat leikata itse\u00E4\u00E4n, esityisesti, jos k\u00E4ytet\u00E4\u00E4n karskia laskentamenetelm\u00E4\u00E4.
+ui.plugin.analysis.BufferPlugIn.buffers-all-geometries-in-the-input-layer=Puskuroi kaikki sy\u00F6tt\u00F6tason geometriat
 ui.plugin.analysis.BufferPlugIn.cap-flat=Tasattu
 ui.plugin.analysis.BufferPlugIn.cap-round=Py\u00F6re\u00E4
 ui.plugin.analysis.BufferPlugIn.cap-square=Laatikko
@@ -1728,7 +1729,7 @@ ui.plugin.analysis.GeometryFunctionPlugIn.The-Source-layer-features-provide-the-
 ui.plugin.analysis.GeometryFunctionPlugIn.union=Unioni
 ui.plugin.analysis.GeometryFunctionPlugIn.Update-Source-features-with-result=P\u00E4ivit\u00E4 l\u00E4ht\u00F6kohteet tuloksen mukaisiksi
 ui.plugin.analysis.GeometryFunctionPlugIn.Use-selected-features-only=K\u00E4yt\u00E4 vain valittuja kohteita
-ui.plugin.analysis.OffsetCurvePlugIn.description = \#T\:Offset all lines in the input layer.\nPositive offset is on the left of the oriented line while negative offset is on the right.
+ui.plugin.analysis.OffsetCurvePlugIn.description = Puskuroi kaikki sy\u00F6tt\u00F6tason geometriat ja laskee niiden viereen uudet geometriat.  Positiivinen poikketus on kulkusuunnassa vasemmalle, negatiivinen oikealle.  Uudet geometriat voivat leikata itse\u00E4\u00E4n, esityisesti, jos k\u00E4ytet\u00E4\u00E4n karskia laskentamenetelm\u00E4\u00E4.
 ui.plugin.analysis.OffsetCurvePlugIn.distance=Et\u00E4isyys
 ui.plugin.analysis.OffsetCurvePlugIn.fixed-distance=Kiinte\u00E4 et\u00E4isyys (+ vasemmalle ja - oikealle puolelle)
 ui.plugin.analysis.OffsetCurvePlugIn.offset=poikkeutus
