@@ -1579,6 +1579,7 @@ ui.MenuNames.TOOLS.WARP = D\u00E9former
 ui.MenuNames.TOPOLOGY = Topologie
 ui.MenuNames.TWOLAYERS = Deux couches
 ui.MenuNames.VIEW = Vue
+ui.MenuNames.VIEW.MAP_DECORATIONS = El\u00E9ments d'habillage
 ui.MenuNames.WINDOW = Fen\u00EAtre
 ui.MenuNames.WINDOW.SYNCHRONIZATION = Synchronisation
 ui.MenuNames.ZOOM = Zoom
@@ -1901,7 +1902,7 @@ ui.plugin.analysis.GeometryFunctionPlugIn.layer-a = Couche A
 ui.plugin.analysis.GeometryFunctionPlugIn.layer-b = Couche B
 ui.plugin.analysis.GeometryFunctionPlugIn.symetric-difference = Diff\u00E9rence sym\u00E9trique
 ui.plugin.analysis.GeometryFunctionPlugIn.union = Union
-ui.plugin.analysis.OffsetCurvePlugIn.description = D\u00E9cale toutes les lignes de la couche.\nUn d\u00E9calage positif d\u00E9cale \u00E0 gauche de la ligne orient\u00E9e tandis qu'un d\u00E9calage n\u00E9gatif d\u00E9cale \u00E0 droite.
+ui.plugin.analysis.OffsetCurvePlugIn.description = D\u00E9cale les lignes.\nUn d\u00E9calage positif d\u00E9cale \u00E0 gauche de la ligne orient\u00E9e tandis qu'un d\u00E9calage n\u00E9gatif d\u00E9cale \u00E0 droite.
 ui.plugin.analysis.OffsetCurvePlugIn.distance = Distance
 ui.plugin.analysis.OffsetCurvePlugIn.fixed-distance = Distance fixe
 ui.plugin.analysis.OffsetCurvePlugIn.offset = d\u00E9cal\u00E9
