@@ -1570,6 +1570,7 @@ ui.MenuNames.TOOLS.WARP = Transzform\u00E1ci\u00F3
 ui.MenuNames.TOPOLOGY = Topol\u00F3gia
 ui.MenuNames.TWOLAYERS = K\u00E9t r\u00E9teg
 ui.MenuNames.VIEW = N\u00E9zet
+ui.MenuNames.VIEW.MAP_DECORATIONS = \#T\:Map Decorations
 ui.MenuNames.WINDOW = Ablak
 ui.MenuNames.WINDOW.SYNCHRONIZATION = Szinkroniz\u00E1l\u00E1s
 ui.MenuNames.ZOOM = Nagy\u00EDt
@@ -1891,7 +1892,7 @@ ui.plugin.analysis.GeometryFunctionPlugIn.layer-a = R\u00E9teg A
 ui.plugin.analysis.GeometryFunctionPlugIn.layer-b = R\u00E9teg B
 ui.plugin.analysis.GeometryFunctionPlugIn.symetric-difference = Szimmetrikus geometria
 ui.plugin.analysis.GeometryFunctionPlugIn.union = \u00DAni\u00F3
-ui.plugin.analysis.OffsetCurvePlugIn.description = \#T\:Offset all lines in the input layer.\nPositive offset is on the left of the oriented line while negative offset is on the right.
+ui.plugin.analysis.OffsetCurvePlugIn.description = \#T\:Offset lines.\nPositive offset is on the left of the oriented line while negative offset is on the right.
 ui.plugin.analysis.OffsetCurvePlugIn.distance = \#T\:Distance
 ui.plugin.analysis.OffsetCurvePlugIn.fixed-distance = \#T\:Fixed Distance
 ui.plugin.analysis.OffsetCurvePlugIn.offset = \#T\:offset
