@@ -1611,6 +1611,7 @@ ui.MenuNames.TOOLS.WARP=Deforma
 ui.MenuNames.TOPOLOGY=Topologia
 ui.MenuNames.TWOLAYERS=Due livelli
 ui.MenuNames.VIEW=Vista
+ui.MenuNames.VIEW.MAP_DECORATIONS = \#T\:Map Decorations
 ui.MenuNames.WINDOW=Finestra
 ui.MenuNames.WINDOW.SYNCHRONIZATION=Sincronizza
 ui.MenuNames.ZOOM=Zoom
@@ -1731,7 +1732,7 @@ ui.plugin.analysis.GeometryFunctionPlugIn.The-Source-layer-features-provide-the-
 ui.plugin.analysis.GeometryFunctionPlugIn.union=Unione
 ui.plugin.analysis.GeometryFunctionPlugIn.Update-Source-features-with-result=Aggiorna elementi  origine con risultato
 ui.plugin.analysis.GeometryFunctionPlugIn.Use-selected-features-only=Usa solo elementi selezionati
-ui.plugin.analysis.OffsetCurvePlugIn.description = \#T\:Offset all lines in the input layer.\nPositive offset is on the left of the oriented line while negative offset is on the right.
+ui.plugin.analysis.OffsetCurvePlugIn.description = \#T\:Offset lines.\nPositive offset is on the left of the oriented line while negative offset is on the right.
 ui.plugin.analysis.OffsetCurvePlugIn.distance=Distanza
 ui.plugin.analysis.OffsetCurvePlugIn.fixed-distance=Distanza definita
 ui.plugin.analysis.OffsetCurvePlugIn.offset=offset
