@@ -1568,6 +1568,7 @@ ui.MenuNames.TOOLS.WARP = \u30EF\u30FC\u30D7
 ui.MenuNames.TOPOLOGY = \u30C8\u30DD\u30ED\u30B8\u30FC
 ui.MenuNames.TWOLAYERS = \uFF12\u3064\u306E\u30EC\u30A4\u30E4
 ui.MenuNames.VIEW = \u8868\u793A
+ui.MenuNames.VIEW.MAP_DECORATIONS = \#T\:Map Decorations
 ui.MenuNames.WINDOW = \u30A6\u30A3\u30F3\u30C9\u30FC
 ui.MenuNames.WINDOW.SYNCHRONIZATION = \u540C\u671F\u5316
 ui.MenuNames.ZOOM = \#T\:Zoom
@@ -1888,7 +1889,7 @@ ui.plugin.analysis.GeometryFunctionPlugIn.layer-a = \u30EC\u30A4\u30E4 A
 ui.plugin.analysis.GeometryFunctionPlugIn.layer-b = \u30EC\u30A4\u30E4 B
 ui.plugin.analysis.GeometryFunctionPlugIn.symetric-difference = Symmetric Difference
 ui.plugin.analysis.GeometryFunctionPlugIn.union = \u30E6\u30CB\u30AA\u30F3
-ui.plugin.analysis.OffsetCurvePlugIn.description = \#T\:Offset all lines in the input layer.\nPositive offset is on the left of the oriented line while negative offset is on the right.
+ui.plugin.analysis.OffsetCurvePlugIn.description = \#T\:Offset lines.\nPositive offset is on the left of the oriented line while negative offset is on the right.
 ui.plugin.analysis.OffsetCurvePlugIn.distance = \#T\:Distance
 ui.plugin.analysis.OffsetCurvePlugIn.fixed-distance = \#T\:Fixed Distance
 ui.plugin.analysis.OffsetCurvePlugIn.offset = \#T\:offset
