@@ -2674,6 +2674,7 @@ ui.MenuNames.TOOLS.WARP = \u0D2A\u0D4B\u0D30\u0D4D\u200D\u0D15\u0D4D\u0D15\u0D41
 ui.MenuNames.TOPOLOGY = Topology
 ui.MenuNames.TWOLAYERS = \u0D30\u0D23\u0D4D\u0D1F\u0D41 \u0D32\u0D47\u0D2F\u0D31\u0D41\u0D15\u0D33\u0D4D\u200D 
 ui.MenuNames.VIEW = \u0D26\u0D43\u0D36\u0D4D\u0D2F\u0D02
+ui.MenuNames.VIEW.MAP_DECORATIONS = \#T\:Map Decorations
 ui.MenuNames.WINDOW = \u0D35\u0D3F\u0D28\u0D4D\u200D\u0D21\u0D4B 
 ui.MenuNames.WINDOW.SYNCHRONIZATION = \u0D15\u0D3E\u0D32\u0D2A\u0D4D\u0D2A\u0D46\u0D3E\u0D30\u0D41\u0D24\u0D4D\u0D24\u0D2E\u0D41\u0D23\u0D4D\u0D1F\u0D3E\u0D35\u0D41\u0D15 
 ui.MenuNames.ZOOM = \#T\:
@@ -3180,7 +3181,7 @@ ui.plugin.analysis.GeometryFunctionPlugIn.layer-a = \u0D32\u0D2F\u0D46\u0D30\u0D
 ui.plugin.analysis.GeometryFunctionPlugIn.layer-b = \u0D32\u0D2F\u0D46\u0D30\u0D4D\u200D  B
 ui.plugin.analysis.GeometryFunctionPlugIn.symetric-difference = Symmetric Difference
 ui.plugin.analysis.GeometryFunctionPlugIn.union = \u0D2F\u0D41\u0D23\u0D3F\u0D2F\u0D28\u0D4D\u200D
-ui.plugin.analysis.OffsetCurvePlugIn.description = \#T\:Offset all lines in the input layer.\nPositive offset is on the left of the oriented line while negative offset is on the right.
+ui.plugin.analysis.OffsetCurvePlugIn.description = \#T\:Offset lines.\nPositive offset is on the left of the oriented line while negative offset is on the right.
 ui.plugin.analysis.OffsetCurvePlugIn.distance = \#T\:Distance
 ui.plugin.analysis.OffsetCurvePlugIn.fixed-distance = \#T\:Fixed Distance
 ui.plugin.analysis.OffsetCurvePlugIn.offset = \#T\:offset
