@@ -1572,6 +1572,7 @@ ui.MenuNames.TOOLS.WARP = Deformar
 ui.MenuNames.TOPOLOGY = Topologia
 ui.MenuNames.TWOLAYERS = Duas layers
 ui.MenuNames.VIEW = Visualizar
+ui.MenuNames.VIEW.MAP_DECORATIONS = \#T\:Map Decorations
 ui.MenuNames.WINDOW = Janela
 ui.MenuNames.WINDOW.SYNCHRONIZATION = Synchronization
 ui.MenuNames.ZOOM = \#T\:Zoom
@@ -1892,7 +1893,7 @@ ui.plugin.analysis.GeometryFunctionPlugIn.layer-a = Layer A
 ui.plugin.analysis.GeometryFunctionPlugIn.layer-b = Layer B
 ui.plugin.analysis.GeometryFunctionPlugIn.symetric-difference = Diferen\u00E7a sim\u00E9trica
 ui.plugin.analysis.GeometryFunctionPlugIn.union = Uni\u00E3o
-ui.plugin.analysis.OffsetCurvePlugIn.description = \#T\:Offset all lines in the input layer.\nPositive offset is on the left of the oriented line while negative offset is on the right.
+ui.plugin.analysis.OffsetCurvePlugIn.description = \#T\:Offset lines.\nPositive offset is on the left of the oriented line while negative offset is on the right.
 ui.plugin.analysis.OffsetCurvePlugIn.distance = \#T\:Distance
 ui.plugin.analysis.OffsetCurvePlugIn.fixed-distance = \#T\:Fixed Distance
 ui.plugin.analysis.OffsetCurvePlugIn.offset = \#T\:offset
