@@ -1779,6 +1779,7 @@ ui.MenuNames.TOOLS.WARP = Warp
 ui.MenuNames.TOPOLOGY = \u0B95\u0B9F\u0BCD\u0B9F\u0BAE\u0BC8\u0BAA\u0BCD\u0BAA\u0BBF\u0BAF\u0BB2\u0BCD
 ui.MenuNames.TWOLAYERS = \u0B87\u0BB0\u0BA3\u0BCD\u0B9F\u0BC1  \u0B85\u0B9F\u0BC1\u0B95\u0BCD\u0B95\u0BC1\u0B95\u0BB3\u0BCD
 ui.MenuNames.VIEW = \u0BAA\u0BBE\u0BB0\u0BCD\u0B95\u0BCD\u0B95\u0BB5\u0BC1\u0BAE\u0BCD
+ui.MenuNames.VIEW.MAP_DECORATIONS = \#T\:Map Decorations
 ui.MenuNames.WINDOW = \u0B9A\u0BBE\u0BB3\u0BB0\u0BAE\u0BCD
 ui.MenuNames.WINDOW.SYNCHRONIZATION = \u0B92\u0BB0\u0BC1\u0B99\u0BCD\u0B95\u0BBF\u0BA3\u0BC8\u0BAA\u0BCD\u0BAA\u0BC1
 ui.MenuNames.ZOOM = \#T\:
@@ -2140,7 +2141,7 @@ ui.plugin.analysis.GeometryFunctionPlugIn.layer-a = Layer A
 ui.plugin.analysis.GeometryFunctionPlugIn.layer-b = Layer B
 ui.plugin.analysis.GeometryFunctionPlugIn.symetric-difference = Symmetric Difference
 ui.plugin.analysis.GeometryFunctionPlugIn.union = Union
-ui.plugin.analysis.OffsetCurvePlugIn.description = \#T\:Offset all lines in the input layer.\nPositive offset is on the left of the oriented line while negative offset is on the right.
+ui.plugin.analysis.OffsetCurvePlugIn.description = \#T\:Offset lines.\nPositive offset is on the left of the oriented line while negative offset is on the right.
 ui.plugin.analysis.OffsetCurvePlugIn.distance = \#T\:Distance
 ui.plugin.analysis.OffsetCurvePlugIn.fixed-distance = \#T\:Fixed Distance
 ui.plugin.analysis.OffsetCurvePlugIn.offset = \#T\:offset
