@@ -2007,7 +2007,8 @@ ui.MenuNames.TOOLS.QA = QA
 ui.MenuNames.TOOLS.WARP = Warp
 ui.MenuNames.TOPOLOGY = Topology
 ui.MenuNames.TWOLAYERS = Two layers
-ui.MenuNames.VIEW = \u0C35\u0C4D\u0C2F\u0C42 
+ui.MenuNames.VIEW = \u0C35\u0C4D\u0C2F\u0C42
+ui.MenuNames.VIEW.MAP_DECORATIONS = \#T\:Map Decorations
 ui.MenuNames.WINDOW = \u0C35\u0C3F\u0C28\u0C4D\u0C21\u0C4B 
 ui.MenuNames.WINDOW.SYNCHRONIZATION = Synchronization
 ui.MenuNames.ZOOM = \#T\:
@@ -2487,7 +2488,7 @@ ui.plugin.analysis.GeometryFunctionPlugIn.layer-a = Layer A
 ui.plugin.analysis.GeometryFunctionPlugIn.layer-b = Layer B
 ui.plugin.analysis.GeometryFunctionPlugIn.symetric-difference = Symmetric Difference
 ui.plugin.analysis.GeometryFunctionPlugIn.union = Union
-ui.plugin.analysis.OffsetCurvePlugIn.description = \#T\:Offset all lines in the input layer.\nPositive offset is on the left of the oriented line while negative offset is on the right.
+ui.plugin.analysis.OffsetCurvePlugIn.description = \#T\:Offset lines.\nPositive offset is on the left of the oriented line while negative offset is on the right.
 ui.plugin.analysis.OffsetCurvePlugIn.distance = \#T\:Distance
 ui.plugin.analysis.OffsetCurvePlugIn.fixed-distance = \#T\:Fixed Distance
 ui.plugin.analysis.OffsetCurvePlugIn.offset = \#T\:offset
