@@ -1821,6 +1821,7 @@ ui.MenuNames.TOOLS.WARP = \u7ECF
 ui.MenuNames.TOPOLOGY = \u62D3\u6251
 ui.MenuNames.TWOLAYERS = \u4E8C\u5C42
 ui.MenuNames.VIEW = \u67E5\u770B
+ui.MenuNames.VIEW.MAP_DECORATIONS = \#T\:Map Decorations
 ui.MenuNames.WINDOW = \u7A97\u53E3
 ui.MenuNames.WINDOW.SYNCHRONIZATION = \u540C\u6B65
 ui.MenuNames.ZOOM = \#T\:
@@ -2174,7 +2175,7 @@ ui.plugin.analysis.GeometryFunctionPlugIn.layer-a = A\u5C42
 ui.plugin.analysis.GeometryFunctionPlugIn.layer-b = B\u5C42
 ui.plugin.analysis.GeometryFunctionPlugIn.symetric-difference = \u5BF9\u79F0\u5DEE
 ui.plugin.analysis.GeometryFunctionPlugIn.union = \u5408\u5E76
-ui.plugin.analysis.OffsetCurvePlugIn.description = \#T\:Offset all lines in the input layer.\nPositive offset is on the left of the oriented line while negative offset is on the right.
+ui.plugin.analysis.OffsetCurvePlugIn.description = \#T\:Offset lines.\nPositive offset is on the left of the oriented line while negative offset is on the right.
 ui.plugin.analysis.OffsetCurvePlugIn.distance = \#T\:Distance
 ui.plugin.analysis.OffsetCurvePlugIn.fixed-distance = \#T\:Fixed Distance
 ui.plugin.analysis.OffsetCurvePlugIn.offset = \#T\:offset
