@@ -145,8 +145,7 @@ com.vividsolutions.jump.workbench.ui.plugin.VerticesInFencePlugIn = \u9802\u9EDE
 com.vividsolutions.jump.workbench.ui.plugin.analysis.BufferPlugIn = \u7DE9\u885D\u5340
 com.vividsolutions.jump.workbench.ui.plugin.analysis.CalculateAreasAndLengthsPlugIn = \u8A08\u7B97\u9762\u7A4D\u548C\u9577\u5EA6
 com.vividsolutions.jump.workbench.ui.plugin.analysis.GeometryFunctionPlugIn = \u5E7E\u4F55\u51FD\u6578
-com.vividsolutions.jump.workbench.ui.plugin.analysis.OffsetCurvePlugIn = \#T\:
-#T:com.vividsolutions.jump.workbench.ui.plugin.analysis.OffsetCurvePlugIn = Offset Curve
+com.vividsolutions.jump.workbench.ui.plugin.analysis.OffsetCurvePlugIn = \#T\:Offset Curve
 com.vividsolutions.jump.workbench.ui.plugin.analysis.OverlayPlugIn = \u91CD\u758A
 com.vividsolutions.jump.workbench.ui.plugin.analysis.UnionPlugIn = \u5408\u4F75
 com.vividsolutions.jump.workbench.ui.plugin.clipboard.CopyImagePlugIn = \u8907\u88FD\u5230\u526A\u8CBC\u677F\u67E5\u770B
@@ -1821,6 +1820,7 @@ ui.MenuNames.TOOLS.WARP = \u7D93
 ui.MenuNames.TOPOLOGY = \u62D3\u64B2
 ui.MenuNames.TWOLAYERS = \u4E8C\u5C64
 ui.MenuNames.VIEW = \u67E5\u770B
+ui.MenuNames.VIEW.MAP_DECORATIONS = \#T\:Map Decorations
 ui.MenuNames.WINDOW = \u7A97\u53E3
 ui.MenuNames.WINDOW.SYNCHRONIZATION = \u540C\u6B65
 ui.MenuNames.ZOOM = \#T\:
@@ -2174,7 +2174,7 @@ ui.plugin.analysis.GeometryFunctionPlugIn.layer-a = A\u5C64
 ui.plugin.analysis.GeometryFunctionPlugIn.layer-b = B\u5C64
 ui.plugin.analysis.GeometryFunctionPlugIn.symetric-difference = \u5C0D\u7A31\u5DEE
 ui.plugin.analysis.GeometryFunctionPlugIn.union = \u5408\u4F75
-ui.plugin.analysis.OffsetCurvePlugIn.description = \#T\:Offset all lines in the input layer.\nPositive offset is on the left of the oriented line while negative offset is on the right.
+ui.plugin.analysis.OffsetCurvePlugIn.description = \#T\:Offset lines.\nPositive offset is on the left of the oriented line while negative offset is on the right.
 ui.plugin.analysis.OffsetCurvePlugIn.distance = \#T\:Distance
 ui.plugin.analysis.OffsetCurvePlugIn.fixed-distance = \#T\:Fixed Distance
 ui.plugin.analysis.OffsetCurvePlugIn.offset = \#T\:offset
